campaign: public boundary typed — 28 untyped public returns and 14 raw-map bodies to 0
Journeys and campaigns with user-authored steps and arms as JsonNode in a
typed envelope, stats and the z-test readout, enrolment and conversion
receipts, the tuning ledger, attribution, guardrail settings, learning
contracts as a relabelled unwrapped view with a sealed stored|defaults
document, decision views that are also the event body, referral codes,
clubs and reports, audience sync, privacy export and erasure. 116
endpoints snapshotted with the noise floor measured first: 85 identical,
22 key-order only, 3 refusal messages pinned from Set.of order. The
published decision context is now stable in order. Twenty-two suites
green; the rest blocked only by stopped components.

Found, not fixed: the scheduled tick applies one tenant's quiet hours to
another tenant's enrolments (FrequencyGuard off-request) — a tenancy
defect for the security batch.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01LQKZAnw3Q6RaGRkmVxTrSc